# Rubik

./: .gitignore
Rubik/: CMakeLists.txt  Main.qml  main.cpp  rubikside.cpp  rubikside.h
